--- a/src/app/covid/covid.component.html
+++ b/src/app/covid/covid.component.html
@@ -1,5 +1,5 @@
 <section class="graph-container">
-    <h2 class="p-3"><i class="fas fa-chart-line mr-2"></i>Covid Data</h2>
+    <h2 class="p-3 mt-5 bg-dark"><i class="fas fa-chart-line mr-2"></i>Covid Data</h2>
     <app-world-data></app-world-data>
 
     <app-world-graph></app-world-graph>
