--- a/src/app/covid/covid.component.css
+++ b/src/app/covid/covid.component.css
@@ -2,3 +2,9 @@
     background-color: #666666;
     color: #fff;
 }
+
+@media (min-width: 1200px) {
+.container, .container-lg, .container-md, .container-sm, .container-xl {
+    max-width: 1340px;
+    }
+}
