Added message if data is null

--- a/src/app/covid/graphs/us-breakdown/us-breakdown.component.html
+++ b/src/app/covid/graphs/us-breakdown/us-breakdown.component.html
@@ -13,4 +13,7 @@
             </canvas>
         </div>
     </div>
+    <div *ngIf="newData.length === 0">
+        Something went wrong retriving the breakdown data....
+    </div>
 </section>
